--- a/tests/PokedexApi.Tests/PokedexApi.Tests.csproj
+++ b/tests/PokedexApi.Tests/PokedexApi.Tests.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.4" />
+    <PackageReference Include="FluentAssertions" Version="8.8.0" />
+    <PackageReference Include="FluentValidation" Version="12.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.4" />
@@ -19,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\pokedex.Api\pokedex.Api.csproj" />
+    <ProjectReference Include="..\..\src\Pokedex.Api\Pokedex.Api.csproj" />
   </ItemGroup>
 
 </Project>
