tests: add client test and configs

--- a/src/pokedex.Api/appsettings.json
+++ b/src/pokedex.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "PokemonApiOptions": {
+    "BaseUri":"https://pokeapi.co/api/v2/"
+},
+
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console"],
     "MinimumLevel": {
