--- a/src/pokedex.Api/appsettings.json
+++ b/src/pokedex.Api/appsettings.json
@@ -8,8 +8,9 @@
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
+        "Microsoft": "Information",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "System": "Information"
       }
     },
     "WriteTo": [
