fix: dockerfile path for ci

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   pokedex-api:
     build:
       context: .
-      dockerfile: src/Pokedex.Api/Dockerfile
+      dockerfile: ./src/Pokedex.Api/Dockerfile
     ports:
       - "5283:5283"
     environment:
