feat: add client for calling translation api

--- a/src/Pokedex.Api/appsettings.json
+++ b/src/Pokedex.Api/appsettings.json
@@ -1,7 +1,11 @@
 {
   "PokemonApiOptions": {
-    "BaseUri":"https://pokeapi.co/api/v2/"
+    "BaseUri":"https://pokeapi.co/api/v2/pokemon-species/"
 },
+  "TranslationApiOptions": {
+    "BaseUri": "https://api.funtranslations.com/translate/"
+  },
+
 
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console"],
