--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,4 @@ jobs:
         run: dotnet build src/Pokedex.Api -c Release --no-restore
 
       - name: Run tests
-        run: dotnet test src/Pokedex.Api --no-build --verbosity normal
+        run: dotnet test tests/PokedexApi.Tests --no-build --verbosity normal
